--- a/blog-server/package.json
+++ b/blog-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "run": "npx nodemon src/server.js"
+    "dev": "npx nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
