--- a/blog-client/package.json
+++ b/blog-client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
     "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
