--- a/blog-client/package.json
+++ b/blog-client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.2",
     "axios": "^1.6.7",
+    "html-react-parser": "^5.1.8",
     "js-cookie": "^3.0.5",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
